--- a/specify_object.yaml
+++ b/specify_object.yaml
@@ -1,31 +1,45 @@
 function_name: "specify_object"
 instruction: |
-  Given a general object (noun), output a more specific object (noun). If you cannot output more specifc one, please output None.
+  Given a chain of objects (nouns) where each subsequent object is more specific than the previous, output an even more specific object (noun) to continue the chain.
   
-temperature: 0.7
+temperature: 0.5
 
 example_conversations:
-  - prompt: "car"
-    answer: "sports car"
-  - prompt: "fruit"
-    answer: "apple"
+  - prompt: "vehicle"
+    answer: "car"
+  - prompt: "food"
+    answer: "fruit"
+  - prompt: "living being"
+    answer: "animal"
+  - prompt: "literature"
+    answer: "book"
+  - prompt: "geographical location"
+    answer: "city"
+  - prompt: "living thing"
+    answer: "plant"
   - prompt: "animal"
-    answer: "African elephant"
-  - prompt: "book"
+    answer: "dog"
+  - prompt: "electronic device"
+    answer: "phone"
+  - prompt: "vehicle, car"
+    answer: "sports car"
+  - prompt: "food, fruit"
+    answer: "apple"
+  - prompt: "living being, animal"
+    answer: "elephant"
+  - prompt: "literature, book"
     answer: "Harry Potter and the Philosopher's Stone"
-  - prompt: "city"
+  - prompt: "geographical location, city"
     answer: "New York City"
-  - prompt: "plant"
+  - prompt: "living thing, plant"
     answer: "Rosemary"
-  - prompt: "dog"
+  - prompt: "animal, dog"
     answer: "Labrador Retriever"
-  - prompt: "phone"
+  - prompt: "electronic device, phone"
     answer: "iPhone 12"
-  - prompt: "bird"
+  - prompt: "animal, bird"
     answer: "Peregrine Falcon"
-  - prompt: "instrument"
+  - prompt: "musical instrument, string instrument"
     answer: "Classical guitar"
-  - prompt: "computer"
+  - prompt: "electronic device, computer"
     answer: "MacBook Pro"
-  - prompt: "Grand Central Terminal"
-    answer: "None"
