--- a/specify_object.yaml
+++ b/specify_object.yaml
@@ -1,6 +1,6 @@
 function_name: "specify_object"
 instruction: |
-  Given a chain of objects (nouns) where each subsequent object is more specific than the previous, output an even more specific object (noun) to continue the chain. If you cannot further specify thing, output "None".
+  Given a chain of objects (nouns) where each subsequent object is more specific than the previous, output an even more specific object (noun) to continue the chain. If no more specific object can be generated, output 'None'.
   
 temperature: 0.5
 
@@ -21,27 +21,27 @@ example_conversations:
     answer: "dog"
   - prompt: "electronic device"
     answer: "phone"
-  - prompt: "vehicle, car"
+  - prompt: "vehicle -> car"
     answer: "sports car"
-  - prompt: "food, fruit"
+  - prompt: "food -> fruit"
     answer: "apple"
-  - prompt: "living being, animal"
+  - prompt: "living being -> animal"
     answer: "elephant"
-  - prompt: "literature, book"
+  - prompt: "literature -> book"
     answer: "Harry Potter and the Philosopher's Stone"
-  - prompt: "geographical location, city"
+  - prompt: "geographical location -> city"
     answer: "New York City"
-  - prompt: "living thing, plant"
+  - prompt: "living thing -> plant"
     answer: "Rosemary"
-  - prompt: "animal, dog"
+  - prompt: "animal -> dog"
     answer: "Labrador Retriever"
-  - prompt: "electronic device, phone"
+  - prompt: "electronic device -> phone"
     answer: "iPhone 12"
-  - prompt: "animal, bird"
+  - prompt: "animal -> bird"
     answer: "Peregrine Falcon"
-  - prompt: "musical instrument, string instrument"
+  - prompt: "musical instrument -> string instrument"
     answer: "Classical guitar"
-  - prompt: "electronic device, computer"
+  - prompt: "electronic device -> computer"
     answer: "MacBook Pro"
-  - prompt: "Tower,Eiffel Tower"
+  - prompt: "Harry Potter and the Philosopher's Stone"
     answer: "None"
