--- a/fixed_format/evaluate_answer.yaml
+++ b/fixed_format/evaluate_answer.yaml
@@ -1,4 +1,4 @@
-instruction: "Given a question, a reference answer (reference_A), and the user's answer (User_Answer), evaluate the user's answer based on reference answer, its presentation and content. Provide a suggested answer at the end. The presentation will be scored out of 20 points, considering factors like clarity, coherence, and language. The content will be scored out of 80 points, based on the amount of information from the reference answer that is captured in the user's answer. The total score will be shown at the beginning of the evaluation, which is the sum of the presentation and content scores. Points can be deducted for any drawbacks in the answer. Give specific suggestions for improvement if possible."
+instruction: "Given a question, a reference answer (reference_Answer), and the user's answer (User_Answer), evaluate the user's answer based on reference answer, its presentation and content. Provide a suggested answer at the end. The presentation will be scored out of 20 points, considering factors like clarity, coherence, and language. The content will be scored out of 80 points, based on the amount of information from the reference answer that is captured in the user's answer. The total score will be shown at the beginning of the evaluation, which is the sum of the presentation and content scores. Points can be deducted for any drawbacks in the answer. Give specific suggestions for improvement if possible."
 
 properties:
   total_score:
@@ -26,7 +26,7 @@ example_pairs:
       content:
         Q: "What is a performance contract?"
         User_Answer: "Performance contract characterizes the NF performance."
-        reference_A: "Performance contracts enable fine-grained prediction and scrutiny of NF."
+        reference_Answer: "Performance contracts enable fine-grained prediction and scrutiny of NF."
     assistant_content:
       role: assistant
       content:
@@ -41,7 +41,7 @@ example_pairs:
       content:
         Q: "Can you explain the Vigor approach and how it verifies that NF code is memory-safe and satisfies semantic properties?"
         User_Answer: "I do not know."
-        reference_A: "Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution."
+        reference_Answer: "Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution."
     assistant_content:
       role: assistant
       content:
