--- a/fixed_format/specify_object.yaml
+++ b/fixed_format/specify_object.yaml
@@ -1,7 +1,7 @@
 function_name: "specify_object"
 instruction: "Given a chain of objects (nouns) where each subsequent object is a special instance of the previous object, output an even more specific object (noun) to continue the chain. Any thing at the end of chain is a kind of previous thing. If no more specific object can be generated, output 'None'."
 temperature: 0.7
-example_conversations:
+example_pairs:
   - prompt: "Animal -> Mammal -> Dog"
     answer: "Bulldog"
   - prompt: "Furniture -> Chair -> Rocking chair"
