--- a/evaluate_answer.yaml
+++ b/evaluate_answer.yaml
@@ -1,34 +1,53 @@
-function_name: "evaluate_answer"
-instruction: |
-  Given a question, a reference answer and the myanswer, evaluate the myanswer based on its presentation and content. Provide suggest answer at the end.
-  Presentation will be scored out of 20 points, considering factors like clarity, coherence, and language.
-  Content will be scored out of 80 points, based on the amount of information from the reference answer that is captured in the myanswer.
-  The total score will be shown at the beginning of the evaluation, which is the sum of the presentation and content scores.
-  Points can be deducted for any drawbacks in the answer. Give specific suggestions for improvement if possible.
-  Provide the suggested answer at the end which combines the reference answer and user answer only if the user answer provides additional value to the question.
+instruction: " Given a reference answer (reference_Answer), and the user's answer (User_Answer), evaluate the user's answer based on reference answer, its presentation and content. Provide a suggested answer at the end. The presentation will be scored out of 20 points, considering factors like clarity, coherence, and language. The content will be scored out of 80 points, based on the amount of information from the reference answer that is captured in the user's answer. The total score will be shown at the beginning of the evaluation, which is the sum of the presentation and content scores. Points can be deducted for any drawbacks in the answer. Give specific suggestions for improvement if possible. If the answer does not provide any related information for example, I do not know, please give 0 as the score. Each round of evaluations should be independent, which means the later evaluation has nothing to do with the previous evaluation."
 
-example_conversations: 
-  - prompt: |
-      What is a performance contract?
-      Reference Answer: Performance contracts enable fine-grained prediction and scrutiny of NF.
-      myanswer: Performance contract characterizes the NF performance.
+properties:
+  total_score:
+    type: integer
+    description: "The total score of the user's answer based on its presentation and content."
+  content_score:
+    type: integer
+    description: "The score of the user's answer based on the content."
+  content_evaluation:
+    type: string
+    description: "The evaluation of the user's answer content."
+  presentation_score:
+    type: integer
+    description: "The score of the user's answer based on the presentation."
+  presentation_evaluation:
+    type: string
+    description: "The evaluation of the user's answer presentation."
+  suggested_answer:
+    type: string
+    description: "The suggested answer combining the reference answer and user's answer if the latter provides additional value."
 
-    answer: |
-        Total score: 75
-        Content score: 60
-        Evaluation: The answer captures some of the reference answer information but not entirely. The reference answer implies that performance contracts allow for detailed prediction and monitoring of NF (Network Functions), while the answer simply states that a performance contract characterizes NF performance. The details about "fine-grained prediction" and "scrutiny" aren't present in the answer.
-        Presentation score: 15
-        Evaluation: The presentation is mostly clear and coherent but could use more sophisticated language. Suggestion for improvement: Try to use more technical vocabulary related to the topic and ensure the sentences flow well with each other for better coherence.
-        Suggested Answer: As the user's answer does not provide additional value, the suggested answer is the same as the reference answer: 'Performance contracts enable fine-grained prediction and scrutiny of NF.'
-      
-  - prompt: |
-      Can you explain the Vigor approach and how it verifies that NF code is memory-safe and satisfies semantic properties?
-      Reference Answer: Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution.
-      myanswer: I do not know.
-    answer: |
-        Total score: 0
-        Content score: 0
-        Evaluation: Not attempted.
-        Presentation score: 0
-        Evaluation: Not Attempted
-        Suggested Answer: Since the answer is not attempted, the suggested answer is the same as the reference answer. Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution.
+example_pairs:
+  - user_content:
+      role: user
+      content:
+        Q: "What is a performance contract?"
+        User_Answer: "Performance contract characterizes the NF performance."
+        reference_A: "Performance contracts enable fine-grained prediction and scrutiny of NF."
+    assistant_content:
+      role: assistant
+      content:
+        total_score: 75
+        content_score: 60
+        content_evaluation: "The answer captures some of the reference answer information but not entirely. The reference answer implies that performance contracts allow for detailed prediction and monitoring of NF (Network Functions), while the answer simply states that a performance contract characterizes NF performance. The details about 'fine-grained prediction' and 'scrutiny' aren't present in the answer."
+        presentation_score: 15
+        presentation_evaluation: "The presentation is mostly clear and coherent but could use more sophisticated language. Suggestion for improvement: Try to use more technical vocabulary related to the topic and ensure the sentences flow well with each other for better coherence."
+        suggested_answer: "Performance contracts enable fine-grained prediction and scrutiny of NF."
+  - user_content:
+      role: user
+      content:
+        Q: "Can you explain the Vigor approach and how it verifies that NF code is memory-safe and satisfies semantic properties?"
+        User_Answer: "I do not know."
+        reference_A: "Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution."
+    assistant_content:
+      role: assistant
+      content:
+        total_score: 0
+        content_score: 0
+        content_evaluation: "Not attempted."
+        presentation_score: 0
+        presentation_evaluation: "Not Attempted"
+        suggested_answer: "Vigor, which verifies that NF code written in C satisfies semantic properties and is memory-safe by assuming clear separation of NF code into a library of commonly used NF data structures, verified by experts, and stateless NF logic using the verified library and verified automatically using symbolic execution."
